--- a/src/com/github/view/AdminLoginScrn.fxml
+++ b/src/com/github/view/AdminLoginScrn.fxml
@@ -2,16 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
      <tabs>
          <Tab style="-fx-background-radius: 20;" text="Give Permissions">
@@ -32,12 +33,105 @@
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             </content>
          </Tab>
-         <Tab style="-fx-background-radius: 20;" text="Complains">
+         <Tab fx:id="complainsTab" style="-fx-background-radius: 20;" text="Complains">
            <content>
-             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <HBox layoutY="1.0" prefHeight="470.0" prefWidth="550.0">
+                        <children>
+                           <VBox prefHeight="428.0" prefWidth="550.0">
+                              <children>
+                                 <HBox prefHeight="32.0" prefWidth="550.0">
+                                    <children>
+                                       <Label text="Number of complains:">
+                                          <HBox.margin>
+                                             <Insets left="10.0" top="2.0" />
+                                          </HBox.margin>
+                                       </Label>
+                                       <TextField fx:id="tfNumberOfComplains" editable="false" prefHeight="25.0" prefWidth="42.0">
+                                          <HBox.margin>
+                                             <Insets left="20.0" />
+                                          </HBox.margin>
+                                       </TextField>
+                                    </children>
+                                    <VBox.margin>
+                                       <Insets top="10.0" />
+                                    </VBox.margin>
+                                 </HBox>
+                                 <Label text="Username:">
+                                    <VBox.margin>
+                                       <Insets left="10.0" top="10.0" />
+                                    </VBox.margin>
+                                 </Label>
+                                 <ChoiceBox fx:id="userNameChoiceBox" prefWidth="150.0" style="-fx-background-radius: 20;">
+                                    <VBox.margin>
+                                       <Insets left="10.0" top="10.0" />
+                                    </VBox.margin>
+                                 </ChoiceBox>
+                                 <HBox prefHeight="30.0" prefWidth="550.0">
+                                    <children>
+                                       <Label text="Date:">
+                                          <HBox.margin>
+                                             <Insets left="10.0" top="2.0" />
+                                          </HBox.margin>
+                                       </Label>
+                                       <TextField fx:id="tfDateOfComplain" disable="true" editable="false" prefHeight="25.0" prefWidth="163.0" style="-fx-background-radius: 20;">
+                                          <HBox.margin>
+                                             <Insets left="20.0" />
+                                          </HBox.margin>
+                                       </TextField>
+                                    </children>
+                                    <VBox.margin>
+                                       <Insets top="15.0" />
+                                    </VBox.margin>
+                                 </HBox>
+                                 <Label text="Complain Message:">
+                                    <VBox.margin>
+                                       <Insets left="10.0" top="15.0" />
+                                    </VBox.margin>
+                                 </Label>
+                                 <TextArea fx:id="complainMessagetextArea" editable="false" prefHeight="152.0" prefWidth="550.0" style="-fx-background-radius: 0;">
+                                    <VBox.margin>
+                                       <Insets left="10.0" right="10.0" top="10.0" />
+                                    </VBox.margin>
+                                 </TextArea>
+                                 <Label text="Answer:">
+                                    <VBox.margin>
+                                       <Insets left="10.0" top="20.0" />
+                                    </VBox.margin>
+                                 </Label>
+                                 <TextArea fx:id="answerTextArea" prefHeight="123.0" prefWidth="550.0">
+                                    <VBox.margin>
+                                       <Insets left="10.0" right="10.0" top="10.0" />
+                                    </VBox.margin>
+                                 </TextArea>
+                                 <HBox prefHeight="100.0" prefWidth="200.0">
+                                    <children>
+                                       <Button mnemonicParsing="false" style="-fx-background-radius: 20;" text="We're sorry">
+                                          <HBox.margin>
+                                             <Insets left="10.0" top="20.0" />
+                                          </HBox.margin>
+                                       </Button>
+                                       <Button mnemonicParsing="false" style="-fx-background-radius: 20;" text="Compensate">
+                                          <HBox.margin>
+                                             <Insets left="10.0" top="20.0" />
+                                          </HBox.margin>
+                                       </Button>
+                                       <Button mnemonicParsing="false" style="-fx-background-radius: 20;" text="Print">
+                                          <HBox.margin>
+                                             <Insets left="10.0" top="20.0" />
+                                          </HBox.margin>
+                                       </Button>
+                                    </children>
+                                 </HBox>
+                              </children>
+                           </VBox>
+                        </children>
+                     </HBox>
+                  </children></AnchorPane>
            </content>
          </Tab>
-       <fx:include source="viewProfile.fxml"></fx:include>
+       <fx:include source="viewProfile.fxml" />
      </tabs>
    </TabPane>
    <Button id="exitLoginButton" fx:id="signoutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" onAction="#handleSignoutButtonPressed" prefHeight="24.0" prefWidth="24.0" />
