--- a/src/com/github/view/developerMenu.fxml
+++ b/src/com/github/view/developerMenu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane prefHeight="523.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.DeveloperMenu">
+<AnchorPane prefHeight="523.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.DeveloperMenu">
    <children>
       <Button layoutX="24.0" layoutY="58.0" mnemonicParsing="false" onAction="#simulation" text="Simulation" />
       <Label layoutX="22.0" layoutY="14.0" prefHeight="30.0" prefWidth="256.0" text="Developer Menu (Access to all other Menu)" />
@@ -14,8 +14,9 @@
       <Button layoutX="27.0" layoutY="162.0" mnemonicParsing="false" onAction="#trainDriver" text="TrainDriver" />
       <Button layoutX="25.0" layoutY="237.0" mnemonicParsing="false" onAction="#adminLoginScreen" text="AdminLogin" />
       <Button layoutX="25.0" layoutY="274.0" mnemonicParsing="false" onAction="#busDriver" text="BusDriver" />
-      <Button layoutX="23.0" layoutY="311.0" mnemonicParsing="false" onAction="#employeeMenu" text="EmployeeMenu" />
-      <Button layoutX="25.0" layoutY="347.0" mnemonicParsing="false" onAction="#login" text="Login" />
-      <Button layoutX="22.0" layoutY="381.0" mnemonicParsing="false" onAction="#splashScreen" text="SplashScreen" />
+      <Button layoutX="25.0" layoutY="354.0" mnemonicParsing="false" onAction="#employeeMenu" text="EmployeeMenu" />
+      <Button layoutX="25.0" layoutY="392.0" mnemonicParsing="false" onAction="#login" text="Login" />
+      <Button layoutX="25.0" layoutY="429.0" mnemonicParsing="false" onAction="#splashScreen" text="SplashScreen" />
+      <Button layoutX="25.0" layoutY="315.0" mnemonicParsing="false" onAction="#cityBusDriver" text="CityBusDriver" />
    </children>
 </AnchorPane>
