--- a/src/com/github/view/viewProfile.fxml
+++ b/src/com/github/view/viewProfile.fxml
@@ -1,12 +1,16 @@
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.Label?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Button?>
-<Tab style="-fx-background-radius: 20;" text="View Profile" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.ViewProfile" fx:id="viewProfileTab">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<Tab fx:id="viewProfileTab" style="-fx-background-radius: 20;" text="View Profile" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.ViewProfile">
         <content>
             <AnchorPane minHeight="0.0" minWidth="0.0">
                 <children>
@@ -106,21 +110,19 @@
                                     <Insets top="20.0" />
                                 </VBox.margin>
                             </TextField>
-                            <Button fx:id="editButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit">
-                                <VBox.margin>
-                                    <Insets left="280.0" top="5.0" />
-                                </VBox.margin>
-                            </Button>
-                            <Button fx:id="saveButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save">
-                                <VBox.margin>
-                                    <Insets left="280.0" top="3.0" />
-                                </VBox.margin>
-                            </Button>
+                  <HBox alignment="CENTER">
+                     <children>
+                                  <Button fx:id="editButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Edit" />
+                                  <Button fx:id="saveButton" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Save" />
+                        <Button fx:id="exportButton" onAction="#handleExportButtonPressed" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-radius: 20;" text="Export" />
+                     </children>
+                     <padding>
+                        <Insets top="10.0" />
+                     </padding>
+                  </HBox>
                         </children>
                     </VBox>
                 </children>
             </AnchorPane>
         </content>
     </Tab>
-
-
