--- a/src/com/github/view/AdminLoginScrn.fxml
+++ b/src/com/github/view/AdminLoginScrn.fxml
@@ -6,13 +6,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
      <tabs>
          <Tab style="-fx-background-radius: 20;" text="Give Permissions">
@@ -22,7 +24,19 @@
          </Tab>
        <Tab style="-fx-background-radius: 20;" text="View Booking">
             <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <TableView fx:id="tableView" prefHeight="444.0" prefWidth="550.0">
+                        <columns>
+                           <TableColumn prefWidth="126.0" text="Name" />
+                           <TableColumn prefWidth="117.0" text="Type" />
+                           <TableColumn minWidth="5.0" prefWidth="98.0" text="From" />
+                           <TableColumn prefWidth="103.0" text="To" />
+                           <TableColumn prefWidth="104.0" text="Price" />
+                        </columns>
+                     </TableView>
+                     <Button layoutX="491.0" layoutY="445.0" mnemonicParsing="false" text="Print" />
+                  </children></AnchorPane>
             </content>
          </Tab>
          <Tab style="-fx-background-radius: 20;" text="Update Time Schedule">
