--- a/src/com/github/view/developerMenu.fxml
+++ b/src/com/github/view/developerMenu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane prefHeight="523.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.DeveloperMenu">
+<AnchorPane prefHeight="523.0" prefWidth="300.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.DeveloperMenu">
    <children>
       <Button layoutX="24.0" layoutY="58.0" mnemonicParsing="false" onAction="#simulation" text="Simulation" />
       <Label layoutX="22.0" layoutY="14.0" prefHeight="30.0" prefWidth="256.0" text="Developer Menu (Access to all other Menu)" />
