--- a/src/com/github/view/simulation.fxml
+++ b/src/com/github/view/simulation.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="640.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Simulation">
+<AnchorPane prefHeight="640.0" prefWidth="960.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Simulation">
    <children>
       <TabPane prefHeight="640.0" prefWidth="960.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
