--- a/src/com/github/view/developerMenu.fxml
+++ b/src/com/github/view/developerMenu.fxml
@@ -9,11 +9,11 @@
    <children>
       <Button layoutX="24.0" layoutY="58.0" mnemonicParsing="false" onAction="#simulation" text="Simulation" />
       <Label layoutX="22.0" layoutY="14.0" prefHeight="30.0" prefWidth="256.0" text="Developer Menu (Access to all other Menu)" />
-      <Button layoutX="25.0" layoutY="201.0" mnemonicParsing="false" onAction="#userGUI" text="UserGUI" GridPane.rowIndex="4" />
+      <Button layoutX="25.0" layoutY="201.0" mnemonicParsing="false" onAction="#userGUI" text="User" GridPane.rowIndex="4" />
       <Button layoutX="25.0" layoutY="125.0" mnemonicParsing="false" onAction="#taxiDriver" text="TaxiDriver" />
-      <Button layoutX="25.0" layoutY="237.0" mnemonicParsing="false" onAction="#adminLoginScreen" text="AdminLogin" />
-      <Button layoutX="25.0" layoutY="274.0" mnemonicParsing="false" onAction="#busDriver" text="BusDriver" />
-      <Button layoutX="25.0" layoutY="392.0" mnemonicParsing="false" onAction="#login" text="Login" />
-      <Button layoutX="25.0" layoutY="429.0" mnemonicParsing="false" onAction="#splashScreen" text="SplashScreen" />
+      <Button layoutX="25.0" layoutY="91.0" mnemonicParsing="false" onAction="#adminLoginScreen" text="AdminLogin" />
+      <Button layoutX="24.0" layoutY="166.0" mnemonicParsing="false" onAction="#busDriver" text="Driver" />
+      <Button layoutX="22.0" layoutY="237.0" mnemonicParsing="false" onAction="#login" text="Login" />
+      <Button layoutX="22.0" layoutY="275.0" mnemonicParsing="false" onAction="#splashScreen" text="SplashScreen" />
    </children>
 </AnchorPane>
