--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
@@ -27,10 +24,12 @@
                      <TextArea fx:id="description" layoutX="312.0" layoutY="150.0" prefHeight="200.0" prefWidth="200.0" />
                      <Label layoutX="312.0" layoutY="103.0" text="Description:" />
                      <Button fx:id="handleDescription" layoutX="249.0" layoutY="390.0" mnemonicParsing="false" style="-fx-background-radius: 20;" text="Save" />
+                     <CheckBox fx:id="Available" layoutX="14.0" layoutY="227.0" mnemonicParsing="false" text="Available" />
+                     <CheckBox fx:id="UnAvailable" layoutX="14.0" layoutY="257.0" mnemonicParsing="false" text="Unavailable" />
                   </children></AnchorPane>
             </content>
          </Tab>
-        <fx:include source="viewProfile.fxml"></fx:include>
+        <fx:include source="viewProfile.fxml" />
      </tabs>
    </TabPane>
    <Button id="exitLoginButton" fx:id="signOutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
