--- a/src/com/github/view/adminScreen.fxml
+++ b/src/com/github/view/adminScreen.fxml
@@ -103,7 +103,7 @@
                                  <Insets top="20.0" />
                               </VBox.margin>
                            </TextField>
-                           <PasswordField fx:id="newPasswordTextField" style="-fx-background-radius: 20;">
+                           <PasswordField fx:id="passwordTextField" style="-fx-background-radius: 20;">
                               <VBox.margin>
                                  <Insets top="20.0" />
                               </VBox.margin>
@@ -113,7 +113,7 @@
                                  <Insets top="20.0" />
                               </VBox.margin>
                            </PasswordField>
-                           <TextField style="-fx-background-radius: 20;">
+                           <TextField fx:id="vehicleNumberTextField" style="-fx-background-radius: 20;">
                               <VBox.margin>
                                  <Insets top="20.0" />
                               </VBox.margin>
