--- a/src/resources/style/login.css
+++ b/src/resources/style/login.css
@@ -13,8 +13,11 @@
     -fx-effect: dropshadow(gaussian, #0FA1BA, 10, 0, 0, 0);*/
 }
 
-#westros{
+#splashScreenPane{
    -fx-background-image: url('../img/LoadingBackground.png');
+}
+#loginScreenPane{
+    -fx-background-image: url('../img/LoginBackground.png');
 }
 
 
