--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="loginScreenPange" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="960.0" style="-fx-background-opacity: 0.2;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
+<AnchorPane id="loginScreenPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="960.0" style="-fx-background-opacity: 0.2;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
    <Pane id="loginPane" fx:id="loginPane" layoutX="343.0" layoutY="76.0" prefHeight="488.0" prefWidth="336.0">
       <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
       <VBox layoutX="59.0" layoutY="83.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
