--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="loginScreenPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="960.0" style="-fx-background-opacity: 0.2;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
-   <Pane id="loginPane" fx:id="loginPane" layoutX="343.0" layoutY="76.0" prefHeight="488.0" prefWidth="336.0">
-      <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="59.0" layoutY="83.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
+<AnchorPane id="loginScreenPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="400.0" style="-fx-background-opacity: 0.2;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
+   <Pane id="loginPane" fx:id="loginPane" prefHeight="640.0" prefWidth="400.0">
+      <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
+      <VBox layoutX="91.0" layoutY="121.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0">
          </HBox>
          <TextField id="usernameField" fx:id="tfAccountLogin" prefHeight="40.0" prefWidth="219.0" promptText="Username" />
@@ -30,9 +30,9 @@
          </VBox>
       </VBox>
    </Pane>
-   <Pane id="registrationPane" fx:id="registrationPane" layoutX="343.0" layoutY="76.0" prefHeight="488.0" prefWidth="336.0" visible="false">
-      <Button id="exitRegistrationButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitRegistrationButton" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="59.0" layoutY="65.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
+   <Pane id="registrationPane" fx:id="registrationPane" prefHeight="640.0" prefWidth="400.0" visible="false">
+      <Button id="exitRegistrationButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitRegistrationButton" prefHeight="24.0" prefWidth="24.0" />
+      <VBox layoutX="91.0" layoutY="121.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
             <Label id="newUserLabel" text="Registration" />
          </HBox>
@@ -48,9 +48,9 @@
          </HBox>
       </VBox>
    </Pane>
-    <Pane id="passwordPane" fx:id="passwordPane" layoutX="343.0" layoutY="76.0" prefHeight="488.0" prefWidth="336.0" visible="false">
-        <Button id="exitRegistrationButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitPasswordPaneButton" prefHeight="24.0" prefWidth="24.0" />
-        <VBox layoutX="59.0" layoutY="65.0" prefHeight="383.0" prefWidth="219.0" spacing="10.0">
+    <Pane id="passwordPane" fx:id="passwordPane" prefHeight="640.0" prefWidth="400.0" visible="false">
+        <Button id="exitRegistrationButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitPasswordPaneButton" prefHeight="24.0" prefWidth="24.0" />
+        <VBox layoutX="91.0" layoutY="121.0" prefHeight="383.0" prefWidth="219.0" spacing="10.0">
             <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
                 <Label id="newUserLabel" text="Choose a password" />
             </HBox>
@@ -64,9 +64,9 @@
             </HBox>
         </VBox>
     </Pane>
-   <Pane id="resetPasswordPane" fx:id="resetPasswordPane" layoutX="343.0" layoutY="76.0" prefHeight="488.0" prefWidth="336.0" visible="false">
-      <Button id="exitResetButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitResetPasswordButton" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="59.0" layoutY="59.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
+   <Pane id="resetPasswordPane" fx:id="resetPasswordPane" prefHeight="640.0" prefWidth="400.0" visible="false">
+      <Button id="exitResetButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitResetPasswordButton" prefHeight="24.0" prefWidth="24.0" />
+      <VBox layoutX="91.0" layoutY="121.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="117.0" prefWidth="219.0">
             <Label id="resetLabel" text="Reset Password" />
          </HBox>
