--- a/src/com/github/view/userScreen.fxml
+++ b/src/com/github/view/userScreen.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="481.0" prefWidth="762.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.UserScreenController">
          <children>
             <TabPane prefHeight="481.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
@@ -35,11 +35,8 @@
                         <Label layoutX="28.0" layoutY="28.0" prefHeight="17.0" prefWidth="71.0" text="From:" />
                         <Label layoutX="28.0" layoutY="88.0" prefHeight="17.0" prefWidth="71.0" text="To:" />
                         <Label fx:id="cost" layoutX="197.0" layoutY="8.0" prefHeight="389.0" prefWidth="434.0" />
-                        <ScrollPane layoutX="198.0" layoutY="12.0" prefHeight="339.0" prefWidth="454.0">
-                           <content>
-                              <VBox fx:id="searchResult" prefHeight="337.0" prefWidth="438.0" />
-                           </content>
-                        </ScrollPane>
+                        <ScrollPane fx:id="searchResults" layoutX="198.0" layoutY="12.0" prefHeight="339.0" prefWidth="500.0" />
+                        <Button fx:id="searchButton" layoutX="28.0" layoutY="162.0" mnemonicParsing="false" onAction="#setSearchResult" prefHeight="28.0" prefWidth="150.0" text="Search" />
                      </children></AnchorPane>
                   </content>
                 </Tab>
@@ -53,6 +50,11 @@
                         <Label layoutX="31.0" layoutY="209.0" prefHeight="17.0" prefWidth="184.0" text="Add credit:" />
                         <TextField fx:id="deposit" layoutX="31.0" layoutY="233.0" />
                         <Button fx:id="processBtn" layoutX="308.0" layoutY="286.0" mnemonicParsing="false" text="Process" />
+                        <Label fx:id="balance" alignment="CENTER" layoutX="31.0" layoutY="57.0" prefHeight="111.0" prefWidth="312.0" text="Label" textAlignment="CENTER">
+                           <font>
+                              <Font size="60.0" />
+                           </font>
+                        </Label>
                      </children></AnchorPane>
                      </content>
                   </Tab>
