--- a/src/resources/style/login.css
+++ b/src/resources/style/login.css
@@ -6,6 +6,21 @@
     src: url('/resources/fonts/GameOfThrones.ttf');
 }
 
+GridPane{
+    -fx-background-color: white;
+    -fx-background-radius: 5.0;
+    -fx-background-insets: 0.0 5.0 0.0 5.0;
+    -fx-padding: 10;
+    -fx-hgap: 10;
+    -fx-vgap: 10;
+    -fx-border-color: #800000ff;
+    -fx-border-width: 2;
+
+}
+GridPane Label{
+    -fx-wrap-text: true;
+}
+
 #root {
     -fx-background-color: transparent;
     -fx-font-family: 'Ubuntu';
